# sistema-tickets-gpc

./: .gitignore  ABRIR_APP_COMPILADO.bat  ABRIR_APP_DEV.bat  CRIAR_BACKUP_AGENDADO.bat  GERAR_EXE.bat  NOTA_FASE4.md  PORTEX_BACKUP.ps1  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: ARQUITETURA.md  ELGIN_I8.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  payments.rs  printer.rs
src/components/cashier/: CashierCheckout.tsx
src/components/layout/: AppLayout.tsx  TopBar.tsx
src/components/mesa/: MesaCard.tsx  MesaCheckout.tsx  MesaModal.tsx
src/components/products/: CategoryManager.tsx  PrintModal.tsx  ProductCard.tsx  ProductForm.tsx
src/components/reports/: SalesBarChart.tsx
src/components/ui/: Button.tsx  EmptyState.tsx  Modal.tsx  Select.tsx  (+2 more)
src/database/: contracts.ts
src/hooks/: useAppData.ts  useDebouncedValue.ts  useTheme.ts
src/pages/: CashRegisterPage.tsx  DashboardPage.tsx  FecharCaixa.tsx  FirstAdminPage.tsx  GuiaCaixaPage.tsx  HomePage.tsx  InitialSetupPage.tsx  InventoryPage.tsx  LoginPage.tsx  LogsPage.tsx  MesasDashboardPage.tsx  OnboardingPage.tsx  ReportsPage.tsx  SettingsPage.tsx  UsersPage.tsx  VerifyTicketPage.tsx
src/services/: adminService.ts  cashierService.ts  configService.ts  mesaService.ts  printerService.ts  productService.ts  tauri.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: currency.ts  dates.ts  errors.ts  permissions.ts  validation.ts
