[package]
name = "sistema_tickets_gpc"
version = "1.0.0"
description = "Sistema de Tickets GPC"
authors = ["Gabriel Portela Carmo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sistema_tickets_gpc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
